[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agisti"
version = "0.5.0"
description = "Autonomous Generative Intelligence through Self-Taught Iteration"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "safetensors>=0.4.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]
gpu = [
    "faiss-gpu>=1.7.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["agisti*"]
