[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "agisti-core"
version = "0.1.0"
description = "High-performance Rust core for AGISTI"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "agisti_core"
